# EsportsHelper

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  override.txt  pyproject.toml  requirements.txt  run_job.sh
.github/workflows/: docker-image.yml
EsportsHelper/: Config.py  GUIThread.py  LiveDataProvider.py  Logger.py  Match.py  Stats.py  Stream.py  Utils.py  VersionManager.py  Webdriver.py
driver/.wdm/: drivers.json
