[project]
name = "esportshelper"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cloudscraper==1.2.71",
    "plyer==2.1.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "retrying==1.3.4",
    "rich==13.3.4",
    "selenium==4.8.3",
    "undetected-chromedriver==3.4.6",
    "urllib3==1.26.15",
    "webdriver-manager==4.0.2",
]
